--- a/triplet/public/index.html
+++ b/triplet/public/index.html
@@ -22,7 +22,7 @@
     <!-- Preload key fonts or assets (optional) -->
     <link rel="preload" href="%PUBLIC_URL%/fonts/fontname.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
     
-    <title>React App</title>
+    <title>Triplet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
