--- a/triplet/public/index.html
+++ b/triplet/public/index.html
@@ -23,6 +23,7 @@
     <link rel="preload" href="%PUBLIC_URL%/fonts/fontname.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
     
     <title>Triplet</title>
+    <base href="/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
